--- a/style.css
+++ b/style.css
@@ -19,19 +19,22 @@ body {
   letter-spacing: -0.32px;
   font-weight: 400;
 }
-
 .text-sm-24 {
   font: 24px fjalla one;
-  text-transform: uppercase;
-  letter-spacing: -0.32px;
   font-weight: 400;
-  line-height: 24px;
+}
+.text-lg-184 {
+  font: 184px fjalla one;
+  text-transform: uppercase;
+  letter-spacing: -0.5rem;
+  font-weight: 400;
+  line-height: 180px;
 }
 
 .text-large-360 {
-  font: 1000px Six Caps;
-
-  line-height: 880px;
+  font: 70vw Six Caps;
+  line-height: 5vw;
+  line-height: 780px;
 }
 
 .nav-bar {
@@ -53,13 +56,13 @@ body {
   width: 100%;
   height: 300px;
   position: relative;
-  z-index: 1;
+  z-index: 0;
 }
 
 .hero-image-section {
-  z-index: 1;
   display: flex;
   position: relative;
+  z-index: 0;
   height: 300px;
   transition: transform 1s ease-in-out;
 }
@@ -69,33 +72,36 @@ body {
   object-position: center;
   height: 100%;
   object-fit: cover;
+  z-index: 0;
   flex-shrink: 0;
 }
 
 .hero-text-container {
   position: relative;
-  height: 100vh;
+  height: 150vh;
   width: 100%;
   overflow: visible;
   padding: 20px;
   /* background: #e98d8d; */
 }
 
-.hero-text-container .poison-text-hero{
+.hero-text-container .poison-text-hero {
   position: relative;
+  height: fit-content;
   z-index: 8;
 }
 
-.hero-text-container h1 {
+.hero-text-container .poison-text-hero h1 {
   position: absolute;
-  z-index: 8;
-  font-weight: 400;
+  z-index: 10; /* Higher than the slider z-index */
+
+  pointer-events: none; /* Prevent interference with other elements */
 }
 
 .drag-ball {
   padding: 2px;
   top: 50%;
-  left: 50%;
+  left: 6%;
   border-radius: 50%;
   background-color: black;
   display: flex;
@@ -122,11 +128,69 @@ body {
     transform: rotate(360deg);
   }
 }
+.image-section {
+  background: rgb(255, 159, 159);
+}
 
-.hero-text-container {
+.image-section-container {
+  display: block; /* Change from flex to block */
   position: relative;
   height: 100vh;
-  width: 100vw;
-  padding: 20px;
   overflow: hidden;
 }
+
+.page2-image-section {
+  height: 470px;
+
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  z-index: 1; /* Ensures proper stacking */
+
+}
+
+.page2-image-section img {
+  height: 470px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.pg2-image-text-overly {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  opacity: 1;
+  padding: 72px 46px;
+  flex-direction: column;
+  gap: 120px;
+}
+
+.page2-img-bottom{
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.page2-img-bottom h5{
+  color: #d9d9d9;
+
+}
+
+.page2-image-section:nth-child(1) {
+  z-index: 1;
+  top: 0;
+}
+.page2-image-section:nth-child(2) {
+  background: #b1f8b4;
+  z-index: 2;
+  top: 100%;
+}
+.page2-image-section:nth-child(3) {
+  background: #b1d9f8;
+  top: 150%;
+  z-index: 3;
+}
+
+
