--- a/style.css
+++ b/style.css
@@ -128,8 +128,6 @@ body {
     transform: rotate(360deg);
   }
 }
-.image-section {
-}
 
 .image-section-container {
   display: block; /* Change from flex to block */
@@ -140,13 +138,11 @@ body {
 
 .page2-image-section {
   height: 470px;
-
   position: absolute;
   top: 100%;
   left: 0;
   width: 100%;
-  z-index: 1; /* Ensures proper stacking */
-
+  z-index: 1; 
 }
 
 .page2-image-section img {
@@ -172,6 +168,7 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
 .page2-img-bottom h5{
   color: #d9d9d9;
 
@@ -181,11 +178,13 @@ body {
   z-index: 1;
   top: 0;
 }
+
 .page2-image-section:nth-child(2) {
   background: #b1f8b4;
   z-index: 2;
   top: 100%;
 }
+
 .page2-image-section:nth-child(3) {
   background: #b1d9f8;
   top: 150%;
