--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 }
 
 .text-lg-184 {
-  font: 184px fjalla one;
+  font: 360px fjalla one;
   text-transform: uppercase;
   letter-spacing: -0.5rem;
   font-weight: 400;
@@ -368,9 +368,74 @@ padding: 40px;
 
 .our-team-section{
   width: 100%;
+  position: relative;
 }
 
 .our-team-marquee-bg{
   height: 100vh;
-  background: red;
+  display: flex;
+  width: 100%;
+  gap: 20px;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.our-team-marquee-bg h1{
+  white-space: no-wrap;
+  flex-shrink: 0;
+}
+
+
+.our-team-container{
+  position: absolute;
+  top: 50%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  align-items: start;
+  justify-items: center;
+  
+  overflow: auto;
+}
+
+.team-card-container{
+  display: flex;
+  flex-direction: column;
+  gap: 162px;
+}
+
+.our-team-left{
+  margin-top: 580px;
+}
+
+.our-team-member{
+  height: 582px;
+  position: relative;
+  width: 378px;
+  overflow: hidden;
+  transition: all 0.5s ease-in-out;
+}
+.our-team-member img{
+  height: 582px;
+  width: 378px;
+  object-fit: cover;
+}
+.team-member-details{
+  position: absolute;
+  bottom: 0%;
+  opacity: 0;
+  left: 50%;
+  text-align: center;
+  transition: all 0.5s ease-in-out;
+  transform: translate(-50%, -50%);
+
+}
+
+.our-team-member:hover .team-member-details{
+  opacity: 1;
+}
+
+.our-team-member:hover{
+  transform: rotateZ(10deg);
+  border-radius: 220px;
 }
