--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 80px);
   overflow: hidden;
 }
 
