--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -1,71 +1,261 @@
-*{
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+.text-xl-460 {
+  font: 460px fjalla one;
+  line-height: 460px;
+  text-transform: uppercase;
+  letter-spacing: -1.5rem;
+}
+
+.nav-bar {
+  width: 100%;
+  padding: 26px;
+  background: #000;
+}
+.nav {
+  width: 100%;
+}
+
+.about-hero {
+  width: 100%;
+  background: #ffffff;
+  position: relative;
+}
+
+.about-hero-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 0 200px;
+}
+
+.about-hero-container h1 {
+  color: #000;
+}
+
+.hero-cards-container {
+  position: absolute;
+  width: 100%;
+  top: 100%;
+}
+
+.magnet-card-container {
+  width: 100%;
+  padding: 100px;
+}
+
+.magnet-card {
+  background: #808183;
+  padding-right: 5vw;
+  padding-bottom: 2rem;
+}
+
+.magnet-card .text-sm-16 {
+  color: #fff;
+}
+
+.card-svg-elem img {
+  mix-blend-mode: multiply;
+}
+
+.our-story-section {
+  padding: 191px 80px;
+}
+
+.our-story-container {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+
+.our-story-container p {
+  padding-right: 40vw;
+  text-transform: capitalize;
+  line-height: 1.5;
+}
+
+.join-us-section {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+}
+
+.join-us-image-container {
+  height: 100%;
+  width: 100%;
+}
+
+.join-us-section img {
+  width: 100%;
+  object-fit: contain;
+  height: 100%;
+  object-position: center;
+}
+
+.join-us-overlay {
+  width: 100%;
+  padding: 80px;
+}
+.join-us-overlay h1 {
+  padding-right: 30vw;
+}
+
+.bottom-nav nav {
+  width: 100%;
+  display: flex;
+  text-align: end;
+  justify-content: end;
+}
+
+@media (max-width: 700px) {
+  * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-html , body{
+  }
+  html,
+  body {
     height: 100%;
     width: 100%;
-}
+  }
 
-
-.text-xl-460{
-    font: 460px fjalla one;
+  .text-xl-460 {
+    font: 140px fjalla one;
     line-height: 460px;
     text-transform: uppercase;
-    letter-spacing: -1.5rem;
-}
+    letter-spacing: -0.2rem;
+  }
 
+  .text-lg-180 {
+    font: 56px fjalla one;
+    text-transform: uppercase;
+    letter-spacing: -0.2rem;
+    font-weight: 400;
+    line-height: 1em;
+  }
 
+  .text-sm-24 {
+    font: 24px fjalla one;
+    line-height: 24px;
+    letter-spacing: 0;
+  }
 
-.nav-bar{
+  .nav-bar {
     width: 100%;
     padding: 26px;
     background: #000;
-}
-.nav{
+  }
+  .nav {
     width: 100%;
-}
+  }
 
-.about-hero{
+  .about-hero {
     width: 100%;
     background: #ffffff;
     position: relative;
-}
+  }
 
-.about-hero-container{
+  .about-hero-container {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 100px 0;
-}
+    padding: 100px 0 200px;
+  }
 
-.about-hero-container h1{
+  .about-hero-container h1 {
     color: #000;
-}
+  }
 
-.hero-cards-container{
+  .hero-cards-container {
     position: absolute;
     width: 100%;
     top: 100%;
-}
+  }
 
-.magnet-card-container{
+  .magnet-card-container {
     width: 100%;
     padding: 100px;
-}
+  }
 
-.magnet-card{
+  .magnet-card {
     background: #808183;
-    padding-right: 10vw;
+    padding-right: 5vw;
     padding-bottom: 2rem;
-}
+  }
 
-.magnet-card .text-sm-16{
+  .magnet-card .text-sm-16 {
     color: #fff;
-}
+  }
 
-.card-svg-elem img{
+  .card-svg-elem img {
     mix-blend-mode: multiply;
+  }
+
+  .our-story-section {
+    padding: 191px 80px;
+  }
+
+  .our-story-container {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+  }
+
+  .our-story-container p {
+    padding-right: 0;
+    text-transform: capitalize;
+    line-height: 1.5;
+  }
+
+  .join-us-section {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .join-us-image-container {
+    height: 100%;
+    width: 100%;
+  }
+
+  .join-us-section img {
+    width: 100%;
+    object-fit: contain;
+    height: 100%;
+    object-position: center;
+  }
+
+  .join-us-overlay {
+    width: 100%;
+    padding: 80px;
+  }
+  .join-us-overlay h1 {
+    padding-right: 30vw;
+  }
+
+  .bottom-nav nav {
+    width: 100%;
+    display: flex;
+    text-align: end;
+    justify-content: end;
+  }
+
+  .footer-section .text-sm-24 {
+    font: 16px fjalla one;
+    line-height: 24px;
+    letter-spacing: 0;
+  }
 }
