--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ body {
   font-weight: 400;
   line-height: 100px;
 }
+.text-md-96 {
+  font: 96px fjalla one;
+  text-transform: uppercase;
+  letter-spacing: -3px;
+  font-weight: 400;
+  line-height: 100px;
+}
 
 .text-lg-160 {
   font: 160px fjalla one;
@@ -53,9 +60,9 @@ body {
 .text-lg-180 {
   font: 180px fjalla one;
   text-transform: uppercase;
-  letter-spacing: -0.2rem;
+  letter-spacing: -0.45rem;
   font-weight: 400;
-  line-height: 1em;
+  line-height: 1;
 }
 
 .text-lg-184 {
@@ -74,6 +81,12 @@ body {
 
 .text-xl-460 {
   font: 460px fjalla one;
+  line-height: 460px;
+  text-transform: uppercase;
+  letter-spacing: -1.5rem;
+}
+.text-xl-580 {
+  font: 580px fjalla one;
   line-height: 460px;
   text-transform: uppercase;
   letter-spacing: -1.5rem;
@@ -140,7 +153,27 @@ display: none;
 
 .mobile-nav.active {
   transform: translateY(0);
-  top: 1%;
+  top: 0.8%;
+}
+
+.mobile-nav h3 {
+  overflow: hidden;
+  position: relative;
+}
+
+.mobile-nav h3::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: -100%;
+  position: absolute;
+  background: #ffffff;
+  transition: left 0.3s ease; /* Smooth transition */
+}
+
+.mobile-nav h3:hover::after {
+  left: 0; /* Move the line into view */
 }
 
 .nav-bar {
@@ -840,10 +873,10 @@ display: none;
   }
 
   .our-services-section {
-    padding: 142px 30px;
+    padding: 100px 30px;
     display: flex;
     flex-direction: column;
-    gap: 200px;
+    gap: 100px;
   }
 
   .our-services-head {
@@ -913,7 +946,7 @@ display: none;
   }
 
   .magnet-card-section {
-    padding: 100px 0 200px;
+    padding: 100px 0;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -992,6 +1025,7 @@ display: none;
   align-items: center;
   justify-items: center;
   overflow: hidden;
+  gap: 162px;
 }
 
 .team-card-container {
@@ -1012,7 +1046,7 @@ display: none;
   transition: all 0.5s ease-in-out;
 }
 .our-team-member img {
-  height: 150%;
+  height: 400px;
   width: 100%;
   object-fit: cover;
 }
@@ -1086,16 +1120,18 @@ display: none;
 }
 
 .bottom-nav {
-  display: flex;
   width: 100%;
   padding: 50px ;
   padding-top: 0;
   align-items: end;
-  margin-top: 80px;
+  margin-top: 0px;
   justify-content: end;
   position: relative;
 }
 .bottom-nav .nav-links{
   display: flex;
+}
+.bottom-nav .nav{
+  justify-content: end;
 }
 }
